<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="@dimen/abc_text_size_large_material"
        android:id="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/btnLaunchSpotify"
        android:layout_below="@+id/textView"
        android:layout_marginTop="28dp"
        android:background="#f08c35"
        android:layout_alignLeft="@+id/btnlauchScores"
        android:layout_alignStart="@+id/btnlauchScores"
        android:layout_alignRight="@+id/btnlauchScores"
        android:layout_alignEnd="@+id/btnlauchScores"
        android:textColor="#ffffff"
        android:onClick="launchSpotify" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/btnlauchScores"
        android:background="#f08c35"
        android:layout_below="@+id/btnLaunchSpotify"
        android:layout_alignLeft="@+id/btnLaunchLibrary"
        android:layout_alignStart="@+id/btnLaunchLibrary"
        android:layout_marginTop="23dp"
        android:layout_alignRight="@+id/btnLaunchLibrary"
        android:layout_alignEnd="@+id/btnLaunchLibrary"
        android:textColor="#ffffff"
        android:onClick="launchScores" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/btnLaunchLibrary"
        android:background="#f08c35"
        android:layout_below="@+id/btnlauchScores"
        android:layout_marginTop="23dp"
        android:layout_alignLeft="@+id/btnLaunchBIBigger"
        android:layout_alignStart="@+id/btnLaunchBIBigger"
        android:layout_alignRight="@+id/btnLaunchBIBigger"
        android:layout_alignEnd="@+id/btnLaunchBIBigger"
        android:textColor="#ffffff"
        android:onClick="launchLibrary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/btnLaunchBIBigger"
        android:layout_marginTop="24dp"
        android:background="#f08c35"
        android:layout_below="@+id/btnLaunchLibrary"
        android:layout_alignLeft="@+id/btnLaunchXReader"
        android:layout_alignStart="@+id/btnLaunchXReader"
        android:layout_alignRight="@+id/btnLaunchXReader"
        android:layout_alignEnd="@+id/btnLaunchXReader"
        android:textColor="#ffffff"
        android:onClick="launchBiBigger" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xzy_reader"
        android:id="@+id/btnLaunchXReader"
        android:layout_marginTop="24dp"
        android:background="#f08c35"
        android:layout_below="@+id/btnLaunchBIBigger"
        android:layout_alignLeft="@+id/btnLaunchCapstone"
        android:layout_alignStart="@+id/btnLaunchCapstone"
        android:layout_alignRight="@+id/btnLaunchCapstone"
        android:layout_alignEnd="@+id/btnLaunchCapstone"
        android:textColor="#ffffff"
        android:onClick="launchXreader" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own"
        android:id="@+id/btnLaunchCapstone"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/btnLaunchXReader"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:onClick="launchCapstone" />

</RelativeLayout>
